# Decode-Labs-Internship-

./: CMakeLists.txt  Obstacles.yaml  README.md  empty_table.world  ik_planner_node.py  kinematics.py  obstacles.yaml  planner_only.launch  send_goal.py  setup.py  test_kinematics.py  trajectory.py  ur5_planning.rviz  ur5_sim.launch
